Refactored and fixed lyrics closing window